--- a/front/package.json
+++ b/front/package.json
@@ -2,7 +2,7 @@
   "name": "kanap-front",
   "version": "1.0.0",
   "description": "",
-  "main": "index.html",
+  "main": "html/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
